# api/app/Models/TiposUser.php
@@ -1,15 +1,0 @@
-<?php
-
-namespace App\Models;
-
-use Illuminate\Database\Eloquent\Factories\HasFactory;
-use Illuminate\Database\Eloquent\Model;
-
-class TiposUser extends Model
-{
-    use HasFactory;
-
-    protected $fillable = [
-        'descricao',
-    ];
-}
