# back-end/public/api/openapi.yaml
@@ -309,84 +309,3 @@ paths:
           description: Categoria atualizada com sucesso.
         404:
           description: Categoria não encontrada.
-
-  /tiposuser:  
-    get:
-      summary: Acessar os tipos de usuário cadastrados.
-      responses:
-        200:
-          description: Lista de tipos de usuário.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    descricao:
-                      type: string
-    post:
-      summary: Cadastrar um tipo de usuário.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                descricao:
-                  type: string
-      responses:
-        201:
-          description: Tipo de usuário cadastrado.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  location:
-                    description: O URI do novo tipo de usuário cadastrado.
-                    type: string
-
-  /tiposuser/{id}:  # Operações para tipos de usuário com ID específico
-    parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-    get:
-      summary: Acessar um tipo de usuário específico.
-      responses:
-        200:
-          description: Tipo de usuário encontrado.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  descricao:
-                    type: string
-    delete:
-      summary: Apagar um tipo de usuário.
-      responses:
-        204:
-          description: Tipo de usuário apagado com sucesso.
-        404:
-          description: Tipo de usuário não encontrado.
-    put:
-      summary: Alterar um tipo de usuário.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                descricao:
-                  type: string
-      responses:
-        200:
-          description: Tipo de usuário atualizado com sucesso.
-        404:
-          description: Tipo de usuário não encontrado.
